[gd_scene load_steps=2 format=3 uid="uid://cb7a7pa7j6lox"]

[ext_resource type="Script" path="res://scripts/workshop.gd" id="1_xuxt5"]

[node name="workshop" type="Node2D"]
script = ExtResource("1_xuxt5")

[node name="Background" type="Sprite2D" parent="."]
centered = false

[node name="ReturnButton" type="Button" parent="."]
offset_left = 1665.0
offset_top = 69.0
offset_right = 1818.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 30
text = "Назад"

[node name="DataContainer" type="GridContainer" parent="."]
offset_left = 46.0
offset_top = 45.0
offset_right = 260.0
offset_bottom = 87.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 75
columns = 2

[node name="Label" type="Label" parent="DataContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.380392, 0.188235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Золото"

[node name="Label2" type="Label" parent="DataContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.380392, 0.188235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0$"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 483.0
offset_top = 381.0
offset_right = 1414.0
offset_bottom = 747.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 50

[node name="BuyButton" type="Button" parent="."]
offset_left = 870.0
offset_top = 812.0
offset_right = 1023.0
offset_bottom = 879.0
theme_override_font_sizes/font_size = 30
text = "Купить"

[node name="Popup" type="Popup" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Popup/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 745.0
offset_top = 91.0
offset_right = 1116.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Мастерская"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
